--- a/languages/biblio-pt_BR.po
+++ b/languages/biblio-pt_BR.po
@@ -5,7 +5,7 @@ msgstr ""
 "Project-Id-Version: Bibliographic 0.1\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/bibliographic\n"
 "POT-Creation-Date: 2017-05-22 14:42:04+00:00\n"
-"PO-Revision-Date: 2017-05-22 11:48-0300\n"
+"PO-Revision-Date: 2017-08-15 17:00-0300\n"
 "Last-Translator: Vinicius de Andrade <antoniov@paho.org>\n"
 "Language-Team: \n"
 "Language: \n"
@@ -110,7 +110,7 @@ msgstr "Guardar alterações"
 
 #: template/home.php:66
 msgid "Portuguese"
-msgstr "Portugues"
+msgstr "Português"
 
 #: template/home.php:66
 msgid "Spanish"
