Permite tradução dos rótulos dos filtros. #24

--- a/languages/texts_fr-SAMPLE.ini
+++ b/languages/texts_fr-SAMPLE.ini
@@ -7,10 +7,10 @@ T="Thesis"
 TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
-main_subject="Main subject"
-publication_type="Publication type"
-database="Database"
-publication_country="Publication country"
-language="Language"
+main_subject="Sujet principal"
+publication_type="Type de publication"
+database="Base de données"
+publication_country="Pays de publication"
+language="Langue"
 journal="Journal"
-year="Year"
+year="Année"
