Mostra e permite remover filtros aplicados. #28 #29

--- a/languages/texts_en-SAMPLE.ini
+++ b/languages/texts_en-SAMPLE.ini
@@ -7,7 +7,7 @@ T="Thesis"
 TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
-main_subject="Main subject"
+mj="Main subject"
 publication_type="Publication type"
 database="Database"
 publication_country="Publication country"
