--- a/languages/texts_es-SAMPLE.ini
+++ b/languages/texts_es-SAMPLE.ini
@@ -7,7 +7,7 @@ T="Tesis"
 TS="Tesis/Disertación perteneciente a una Serie Monográfica"
 
 [filter]
-main_subject="Asunto principal"
+mj="Asunto principal"
 publication_type="Tipo de publicación"
 database="Base de datos"
 publication_country="País de publicación"
