--- a/languages/texts_fr-SAMPLE.ini
+++ b/languages/texts_fr-SAMPLE.ini
@@ -7,7 +7,7 @@ T="Thesis"
 TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
-main_subject="Sujet principal"
+mj="Sujet principal"
 publication_type="Type de publication"
 database="Base de données"
 publication_country="Pays de publication"
