--- a/languages/texts_pt-SAMPLE.ini
+++ b/languages/texts_pt-SAMPLE.ini
@@ -7,7 +7,7 @@ T="Tese"
 TS="Tese/Dissertação pertencente a uma Série Monográfica"
 
 [filter]
-main_subject="Assunto principal"
+mj="Assunto principal"
 publication_type="Tipo de publicação"
 database="Base de dados"
 publication_country="País de publicação"
