Permite configurar e apresentar filtros dinâmicos baseados no campo de classificação. #79

--- a/languages/texts_en-SAMPLE.ini
+++ b/languages/texts_en-SAMPLE.ini
@@ -7,10 +7,10 @@ T="Thesis"
 TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
-mj="Main subject"
+descriptor_filter="Main subject"
 publication_type="Publication type"
 database="Database"
 publication_country="Publication country"
-language="Language"
+publication_language="Language"
 journal="Journal"
-year="Year"
+publication_year="Year"
