--- a/languages/texts_fr-SAMPLE.ini
+++ b/languages/texts_fr-SAMPLE.ini
@@ -7,10 +7,10 @@ T="Thesis"
 TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
-mj="Sujet principal"
+descriptor_filter="Sujet principal"
 publication_type="Type de publication"
 database="Base de données"
 publication_country="Pays de publication"
-language="Langue"
+publication_language="Langue"
 journal="Journal"
-year="Année"
+publication_year="Année"
