--- a/languages/texts_pt-SAMPLE.ini
+++ b/languages/texts_pt-SAMPLE.ini
@@ -7,10 +7,10 @@ T="Tese"
 TS="Tese/Dissertação pertencente a uma Série Monográfica"
 
 [filter]
-mj="Assunto principal"
+descriptor_filter="Assunto principal"
 publication_type="Tipo de publicação"
 database="Base de dados"
 publication_country="País de publicação"
-language="Idioma"
+publication_language="Idioma"
 journal="Revista"
-year="Ano"
+publication_year="Ano"
