--- a/languages/texts_es-SAMPLE.ini
+++ b/languages/texts_es-SAMPLE.ini
@@ -7,10 +7,10 @@ T="Tesis"
 TS="Tesis/Disertación perteneciente a una Serie Monográfica"
 
 [filter]
-mj="Asunto principal"
+descriptor_filter="Asunto principal"
 publication_type="Tipo de publicación"
 database="Base de datos"
 publication_country="País de publicación"
-language="Idioma"
+publication_language="Idioma"
 journal="Revista"
-year="Año"
+publication_year="Año"
