Ajuste de tradução. #82

--- a/languages/texts_en-SAMPLE.ini
+++ b/languages/texts_en-SAMPLE.ini
@@ -8,7 +8,7 @@ TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
 descriptor_filter="Main subject"
-publication_type="Publication type"
+publication_type="Document type"
 database="Database"
 publication_country="Publication country"
 publication_language="Language"
