--- a/languages/texts_es-SAMPLE.ini
+++ b/languages/texts_es-SAMPLE.ini
@@ -8,7 +8,7 @@ TS="Tesis/Disertación perteneciente a una Serie Monográfica"
 
 [filter]
 descriptor_filter="Asunto principal"
-publication_type="Tipo de publicación"
+publication_type="Tipo de documento"
 database="Base de datos"
 publication_country="País de publicación"
 publication_language="Idioma"
