--- a/languages/texts_fr-SAMPLE.ini
+++ b/languages/texts_fr-SAMPLE.ini
@@ -8,7 +8,7 @@ TS="Thesis/Dissertation appearing as a Monograph Series"
 
 [filter]
 descriptor_filter="Sujet principal"
-publication_type="Type de publication"
+publication_type="Type de document"
 database="Base de données"
 publication_country="Pays de publication"
 publication_language="Langue"
