--- a/languages/texts_pt-SAMPLE.ini
+++ b/languages/texts_pt-SAMPLE.ini
@@ -8,7 +8,7 @@ TS="Tese/Dissertação pertencente a uma Série Monográfica"
 
 [filter]
 descriptor_filter="Assunto principal"
-publication_type="Tipo de publicação"
+publication_type="Tipo de documento"
 database="Base de dados"
 publication_country="País de publicação"
 publication_language="Idioma"
