Implementa visualização de recursos relacionados #87 e dados de pesquisa #88

--- a/languages/biblio-pt_BR.po
+++ b/languages/biblio-pt_BR.po
@@ -3,19 +3,39 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Bibliographic WP Plugin 0.1\n"
-"Report-Msgid-Bugs-To: http://wordpress.org/tag/bibliographic\n"
-"POT-Creation-Date: 2023-09-20 14:29-0300\n"
-"PO-Revision-Date: 2023-09-20 14:30-0300\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/bibliographic\n"
+"POT-Creation-Date: 2023-10-03T17:54:03+00:00\n"
+"PO-Revision-Date: 2023-10-03 14:55-0300\n"
 "Last-Translator: Vinicius de Andrade <antoniov@paho.org>\n"
 "Language-Team: \n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.0.1\n"
+"X-Generator: Poedit 3.4\n"
 "X-Poedit-KeywordsList: __;_e\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-SearchPath-0: .\n"
+
+#. Plugin Name of the plugin
+msgid "Bibliographic"
+msgstr "Registros bibliográficos"
+
+#. Plugin URI of the plugin
+msgid "http://reddes.bvsalud.org/projects/fi-admin/"
+msgstr ""
+
+#. Description of the plugin
+msgid "Search bibliographic records from FI-ADMIN."
+msgstr "Pesquisa de registros bibliográficos FI-ADMIN."
+
+#. Author of the plugin
+msgid "BIREME/OPAS/OMS"
+msgstr ""
+
+#. Author URI of the plugin
+msgid "http://reddes.bvsalud.org/"
+msgstr ""
 
 #: bibliographic.php:106 settings.php:31
 msgid "Bibliographic record settings"
@@ -33,7 +53,7 @@ msgstr "Registros bibliográficos - Barra lateral"
 msgid "Bibliographic header"
 msgstr "Registros bibliográficos - Cabeçalho"
 
-#: bibliographic.php:273
+#: bibliographic.php:272
 msgid "Settings"
 msgstr "Configurações"
 
@@ -87,7 +107,7 @@ msgstr "ID do AddThis"
 msgid "Google Analytics code"
 msgstr "Código Google Analytics"
 
-#: settings.php:55 template/home.php:250 template/resource.php:238
+#: settings.php:55 template/home.php:250 template/resource.php:305
 msgid "Fulltext"
 msgstr "Texto completo"
 
@@ -143,7 +163,7 @@ msgstr "Selecionados"
 msgid "Save changes"
 msgstr "Guardar alterações"
 
-#: template/home.php:128 template/resource.php:83
+#: template/home.php:128 template/resource.php:150
 msgid "Home"
 msgstr "Início"
 
@@ -151,15 +171,15 @@ msgstr "Início"
 msgid "Search result"
 msgstr "Resultado da busca"
 
-#: template/home.php:152 template/resource.php:95
+#: template/home.php:152 template/resource.php:162
 msgid "Enter one or more words"
 msgstr "Entre uma ou mais palavras"
 
-#: template/home.php:153 template/resource.php:96
+#: template/home.php:153 template/resource.php:163
 msgid "Search"
 msgstr "Pesquisar"
 
-#: template/home.php:154 template/resource.php:97
+#: template/home.php:154 template/resource.php:164
 msgid "Tip! You can do your search using boolean operators."
 msgstr "Dica! Você pode pesquisar usando operadores booleanos."
 
@@ -191,11 +211,11 @@ msgstr "Data de registro"
 msgid "Publication date"
 msgstr "Data de publicação"
 
-#: template/home.php:243 template/resource.php:231
+#: template/home.php:243 template/resource.php:298
 msgid "Fulltext (primary link)"
 msgstr "Texto completo (link principal)"
 
-#: template/home.php:243 template/resource.php:231
+#: template/home.php:243 template/resource.php:298
 msgid "Fulltext (alternative link)"
 msgstr "Texto completo (link alternativo)"
 
@@ -215,15 +235,79 @@ msgstr "mostrar mais"
 msgid "loading"
 msgstr "carregando"
 
-#: template/related.php:56 template/resource.php:253 template/similar.php:41
+#: template/related.php:56 template/resource.php:346 template/similar.php:41
 msgid "No related documents"
 msgstr "Nenhum relacionado encontrado"
 
-#: template/resource.php:145
+#: template/resource.php:79
+msgid "cin"
+msgstr "Comentário em"
+
+#: template/resource.php:80
+msgid "con"
+msgstr "Comentário sobre"
+
+#: template/resource.php:81
+msgid "ein"
+msgstr "Errata em"
+
+#: template/resource.php:82
+msgid "efr"
+msgstr "Errata de"
+
+#: template/resource.php:83
+msgid "cri"
+msgstr "Corrigido e republicado em"
+
+#: template/resource.php:84 template/resource.php:85
+msgid "crf"
+msgstr "Corrigido e republicado de"
+
+#: template/resource.php:86
+msgid "uin"
+msgstr "Atualização em"
+
+#: template/resource.php:87
+msgid "uof"
+msgstr "Atualização de"
+
+#: template/resource.php:88
+msgid "eci"
+msgstr "Expressão de preocupação em"
+
+#: template/resource.php:89
+msgid "ecf"
+msgstr "Expressão de preocupação para"
+
+#: template/resource.php:90
+msgid "rpi"
+msgstr "Republicado em"
+
+#: template/resource.php:91
+msgid "rpf"
+msgstr "Republicado de"
+
+#: template/resource.php:92
+msgid "spin"
+msgstr "Resumo para pacientes em"
+
+#: template/resource.php:93
+msgid "ori"
+msgstr "Relatório original em"
+
+#: template/resource.php:94
+msgid "rin"
+msgstr "Retratação em"
+
+#: template/resource.php:95
+msgid "rof"
+msgstr "Retratação de"
+
+#: template/resource.php:212
 msgid "Publication year"
 msgstr "Ano de publicação"
 
-#: template/resource.php:152
+#: template/resource.php:219
 msgid ""
 "Theses and dissertations in %pub_lang% presented to the %institution% to "
 "obtain the academic title of %academic_title%. Leader: %leader%"
@@ -231,7 +315,7 @@ msgstr ""
 "Teses e dissertações em %pub_lang% apresentado à %institution% para obtenção "
 "do título de %academic_title%. Orientador: %leader%"
 
-#: template/resource.php:155
+#: template/resource.php:222
 msgid ""
 "Theses and dissertations presented to the %institution% to obtain the "
 "academic title of %academic_title%. Leader: %leader%"
@@ -239,23 +323,21 @@ msgstr ""
 "Teses e dissertações apresentado à %institution% para obtenção do título de "
 "%academic_title%. Orientador: %leader%"
 
-#: template/resource.php:250
+#: template/resource.php:328
+msgid "Research data"
+msgstr "Dados de pesquisa"
+
+#: template/resource.php:343
 msgid "More related"
 msgstr "Mais relacionados"
 
-#: template/resource.php:279
+#: template/resource.php:372
 msgid "Related"
 msgstr "Relacionados"
 
 #: template/rss.php:53
 msgid "Bibliographic records"
 msgstr "Registros bibliográficos"
-
-#~ msgid "Bibliographic"
-#~ msgstr "Registros bibliográficos"
-
-#~ msgid "Search bibliographic records from FI-ADMIN."
-#~ msgstr "Pesquisa de registros bibliográficos FI-ADMIN."
 
 #~ msgid "Display filters"
 #~ msgstr "Mostrar filtros"
